# recentthink-ai-be

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  START.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: migrate.Dockerfile
docs/: AI_SERVICE_COMPLETION_REPORT.md  BACKEND_COMPLETION_REPORT.md  ENGINEERING_EXCELLENCE_REPORT.md  FRONTEND_MODEL_SELECTOR.md  ai-prompts.md  ai-service-learning-guide.md  ai-workflow.md  architecture.md  conversation-chat.md  database.md  development.md  docker.md  environment.md  session-enforcement.md  testing.md
migrations/: env.py  script.py.mako
migrations/versions/: 85dfe514c465_add_profile_image.py  a3b7c9d1e2f4_auth_database_layer.py  b4c8d2e3f5a6_add_token_user_id_indexes.py  c5d9e3f4a6b7_add_user_password_changed_at.py  cf98dc735f19_create_admins_and_users_tables.py  d6e1f2a3b4c5_add_leetcode_agent_tables.py  e7f2a3b4c5d6_add_usage_records_table.py  f8a3b4c5d6e7_add_ai_platform_tables.py  g9b4c5d6e7f8_extend_conversation_memory.py  h9c4d5e6f7a8_drop_legacy_leetcode_tables.py  i0d5e6f7a8b9_add_ai_session_model_id.py  j1e6f7a8b9c0_add_ai_session_mode_id.py  k2f7a8b9c0d1_add_hackerrank_progress.py  l3g8b9c0d1e2_add_course_generator_tables.py  m4h9c0d1e2f3_add_dsa_pattern_tables.py  n5i0d1e2f3g4_add_user_profiles.py  o6j1e2f3g4h5_add_user_disabled_deleted_at.py  p7k2f3g4h5i6_add_email_verified_at.py  q8l3g4h5i6j7_add_user_blocked_admin_tables.py  r9m4h5i6j7k8_enrich_usage_records_analytics.py  s0n5i6j7k8l9_add_usage_section_tokens.py  t1a2b3c4d5e6_add_ai_session_chat_fields.py  u2b3c4d5e6f7_add_feature_flags.py
scripts/: align_service_layers.py  docker-entrypoint.sh  docker-verify.py  scaffold_layers.py  seed_admin.py
services/: __init__.py  conftest.py
services/admin_service/: Dockerfile  README.md
services/admin_service/app/: __init__.py  main.py
services/admin_service/app/api/: admin.py  analytics.py  exception_handlers.py  health.py  (+1 more)
services/admin_service/tests/: conftest.py  test_admin_authorization.py  test_analytics.py  test_feature_flags.py  test_health.py  test_notifications.py
services/ai_service/: .coveragerc  Dockerfile  README.md
services/ai_service/app/: __init__.py  main.py
services/ai_service/tests/: conftest.py  test_agents_base.py  test_ai_api.py  test_ai_platform_service.py  test_ai_platform_service_sprint3.py  test_code_explainer_module.py  test_context_validator.py  test_conversation_memory.py  test_cost_calculator.py  test_course_generator_adapter.py  test_course_generator_api.py  test_dsa_pattern_adapter.py  test_dsa_pattern_api.py  test_execution_trace.py  test_feature_max_tokens.py  test_followup_engine.py  test_followup_service.py  test_followup_streaming_session.py  test_hackerrank_api.py  test_hackerrank_problem_fetcher.py  test_hackerrank_url.py  test_health.py  test_history_manager.py  test_incremental_generation.py  test_json_validator.py  test_leetcode_adapter.py  test_leetcode_agents.py  test_leetcode_api.py  test_leetcode_authorization.py  test_leetcode_catalog.py  test_leetcode_integration.py  test_leetcode_markdown.py  test_leetcode_problem_fetcher.py  test_leetcode_rate_limit.py  test_leetcode_service.py  test_leetcode_url.py  test_llm_response_normalizer.py  test_memory_engine.py  test_mode_registry.py  test_model_registry.py  (+17 more)
services/auth_service/: ACCOUNT.md  Dockerfile  README.md
services/auth_service/app/: __init__.py  main.py
services/auth_service/tests/: conftest.py  test_account_api.py  test_account_service.py  test_admin_api.py  test_admin_auth_service.py  test_admin_user_management.py  test_auth_api.py  test_auth_exceptions.py  test_auth_service.py  test_block_vs_disable.py  test_cors.py  test_email_service.py  test_email_verification_service.py  test_health.py  test_jwt_service.py  test_logging.py  test_password_management_service.py  test_password_policy.py  test_password_reset_service.py  test_password_service.py  test_rbac.py  test_sentry.py  test_super_admin_seed.py  test_user_state.py
services/gateway/: .coveragerc  Dockerfile  README.md
services/gateway/app/: __init__.py  main.py
services/gateway/tests/: auth_helpers.py  conftest.py  test_ai_proxy.py  test_extra_coverage.py  test_health.py  test_session_guard.py  test_streaming.py
services/usage_service/: .dockerignore  Dockerfile  README.md
services/usage_service/app/: __init__.py  main.py
services/usage_service/tests/: conftest.py  test_analytics_schemas.py  test_health.py  test_main_bootstrap.py  test_usage_analytics_repository.py  test_usage_api.py  test_usage_service_auth.py
services/user_service/: Dockerfile  README.md
services/user_service/app/: __init__.py  main.py
services/user_service/tests/: conftest.py  test_auth_dependencies.py  test_coverage_gaps.py  test_health.py  test_profile_api.py  test_profile_repository.py  test_profile_service.py  test_statistics_repository.py  test_storage.py  test_storage_extra.py  test_supabase_storage.py  test_users_stub.py  test_validators.py
shared/: __init__.py  config.py
shared/api/: __init__.py  exception_handlers.py
shared/common/: __init__.py
shared/constants/: __init__.py  service.py
shared/database/: __init__.py  session.py
shared/exceptions/: __init__.py  auth.py  base.py  email.py  repository.py
shared/logging/: __init__.py  logger.py  security.py
shared/middleware/: __init__.py  request_id.py
shared/models/: __init__.py  base.py  mixins.py
shared/monitoring/: __init__.py  sentry.py
shared/schemas/: __init__.py  health.py
shared/security/: __init__.py  jwt.py  password.py  service_auth.py  tokens.py
shared/storage/: __init__.py  base.py  factory.py  local.py  supabase.py
shared/utils/: __init__.py
tests/: conftest.py  test_api_exception_handlers.py  test_config.py  test_jwt_security.py  test_logger.py  test_security_logging.py  test_service_auth.py
tests/auth/: conftest.py  test_admin_api_integration.py  test_auth_api_integration.py
tests/crud/: conftest.py  test_admin_crud.py  test_auth_tokens_crud.py  test_user_crud.py
(+379 files in other folders)
