[project]
name = "recentthink"
version = "0.1.0"
description = "RecentThink - a production-ready SaaS AI application (microservice foundation)."
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [{ name = "RecentThink Team" }]
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "email-validator>=2.2.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.10.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.19.0",
    "httpx>=0.27.2",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.28",
    "beautifulsoup4>=4.12.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.2",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "services"]

# ---------------------------------------------------------------------------
# Ruff - linter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py313"
src = ["shared", "services", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection helpers are intended to be called in argument
# defaults, so they must not trigger B008 ("function call in default argument").
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
]

# ---------------------------------------------------------------------------
# Black - formatter
# ---------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py313"]

# ---------------------------------------------------------------------------
# isort - import sorter (kept compatible with black)
# ---------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["shared", "services"]

# ---------------------------------------------------------------------------
# mypy - static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Each microservice roots its own ``app`` package, so the CRUD integration
# tests import ``app.*`` from a specific service. Those imports are resolved
# per-service (see the ``typecheck`` make target); in the shared/tests run
# they are intentionally treated as untyped rather than missing.
[[tool.mypy.overrides]]
module = ["app.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
# Discover the root suite, the CRUD integration tests, and every service's
# own test package. ``importlib`` import mode lets same-named test modules
# (e.g. several ``test_health.py``) coexist without ``__init__.py`` files.
testpaths = ["tests", "services"]
asyncio_mode = "auto"
markers = [
    "db: integration test that requires a live PostgreSQL database.",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "--cov=shared",
    "--cov=services",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
branch = true
source = ["shared", "services"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
